--- a/css/project.css
+++ b/css/project.css
@@ -19,33 +19,35 @@
 }
 /* Project Styles */
 .project {
-    background-color: #f1f1f1;  /* Initial background color */
+    background-color: #ffffff; /* Initial background color */
     border: 1px solid;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.51);
     padding: 20px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease, color 0.3s ease;
+    transition:
+        transform 0.3s ease,
+        box-shadow 0.3s ease,
+        background-color 0.3s ease,
+        color 0.3s ease;
 }
 
 /* Hover effect on the entire project box */
 .project:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-    background-color: #0000ff;  /* Blue background on hover */
-    color: #ffffff;  /* Change all text color to white on hover */
+    background-color: #0000ff; /* Blue background on hover */
+    color: #ffffff; /* Change all text color to white on hover */
 }
 
 /* Ensure all text inside the project box changes color */
 .project:hover .project-name,
 .project:hover .status,
 .project:hover .project-link {
-    color: #ffffff;  /* White text color */
+    color: #ffffff; /* White text color */
 }
 /* For additional hover effects on links */
 .project-link:hover i {
     transform: translateX(5px);
 }
-
-
 
 .project-name {
     font-size: 1.5rem;
@@ -64,17 +66,17 @@
 }
 
 .launched {
-    background-color: #4CAF50;
+    background-color: #4caf50;
     color: white;
 }
 
 .coming-soon {
-    background-color: #FFC107;
+    background-color: #ffc107;
     color: #333;
 }
 
 .in-progress {
-    background-color: #2196F3;
+    background-color: #2196f3;
     color: white;
 }
 
@@ -87,13 +89,10 @@
     transition: color 0.3s ease;
 }
 
-
-
 .project-link i {
     margin-left: 5px;
     transition: transform 0.3s ease;
 }
-
 
 .project-link:hover i {
     transform: translateX(5px);
