--- a/css/styles.css
+++ b/css/styles.css
@@ -802,8 +802,14 @@ footer {
     font-size: 0.9em;
 }
 
-.footer-bottom p {
+.footer-bottom p,
+a {
     margin: 5px 0;
+    color: #999;
+    text-decoration: none;
+}
+.footer-bottom a:hover {
+    color: #0000ff;
 }
 
 .social-icons {
