Update: Remove header line

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ header {
     position: relative; /* Changed from sticky to relative */
     top: 0;
     z-index: 1000;
-    border-bottom: 1px solid #000;
+    border-bottom: 0px solid #000;
 }
 
 nav {
@@ -148,15 +148,17 @@ nav {
 .hero {
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 4rem 2rem;
     background-color: #f8f9fa;
+    height: 100vh; /* Full screen height */
+    text-align: center; /* Centering text */
     transition:
         background-color 0.3s ease,
         color 0.3s ease;
 }
 
 .hero-content {
-    flex: 1;
     max-width: 600px;
 }
 
@@ -185,6 +187,7 @@ nav {
 .hero .key-skills {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center; /* Center the key skills */
     list-style: none;
     padding: 0;
     margin: 0 -0.5rem;
@@ -477,7 +480,7 @@ main {
 }
 
 .dark-mode header {
-    background-color: #222;
+    background-color: #333;
     border-bottom-color: #444;
 }
 
@@ -531,7 +534,7 @@ main {
 
 /*Dark Mode of hero section */
 body.dark-mode .hero {
-    background-color: #1a1a1a;
+    background-color: #3b3b3b;
 }
 
 body.dark-mode .hero h1 {
