Update: color palette

--- a/css/blog.css
+++ b/css/blog.css
@@ -4,7 +4,7 @@
     max-width: 80%;
     margin: 0 auto;
     padding: 20px;
-    font-family: "Poppins", sans-serif;
+    font-family: "Noticia Text", serif;
     box-sizing: border-box;
 }
 
@@ -100,7 +100,7 @@ a {
 }
 
 .blog-body code {
-    font-family: "Poppins", sans-serif;
+    font-family: "Noticia Text", serif;
     font-size: 0.6em;
     word-wrap: break-word;
     white-space: pre-wrap;
